# gpax

./: README.md  pyproject.toml
.github/workflows/: ci.yaml  notebook_smoke.yaml  unit.yaml
docs/source/: conf.py  index.md  installation.md
examples/: 00_Simple_Examples.ipynb  01_Simple_Example_1d_BayesOpt.ipynb  02_Simple_Examples_2d.ipynb  04_Structured_GP.ipynb
gpax/: __init__.py  _version.py  acquisition.py  data.py  experiments.py  gp.py  kernels.py  logger.py  means.py  ski.py  state.py  transforms.py  utils.py
gpax/_tests/: conftest.py  test_array.py  test_gp.py  test_transforms.py
gpax/kernels/: kernels.py
gpax/monty/: json.py
gpax/utils/: experiments.py  prior_utils.py  utils.py
