[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gpax"
authors = [
    {"name" = "Maxim Ziatdinov", "email" = "maxim.ziatdinov@ai4microcopy.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {"file" = "LICENSE"}
description='Gaussian processes in NumPyro and Jax'
classifiers=[
    'Programming Language :: Python',
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS :: MacOS X',
    'Topic :: Scientific/Engineering'
]

# Core dependencies
dependencies = [
    "jax>=0.4.31",
    "numpyro>=0.15.2",
    "dm-haiku>=0.0.12",
    "dunamai==1.19.2",
    "jaxopt",
    "monty",
    "attrs",
]

dynamic = ["version"]

[project.optional-dependencies]
test = [
    "flake8",
    "jaxlib",
    "pytest",
    "pytest-cov",
]

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 60
